[tool.poetry]
name = "pydatapeek"
version = "0.1.0"
description = ""
authors = ["Miro (Shangjing) HU <mirohu@outlook.com>"]
license = "MIT"
packages = [
    { include = "PackageName"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


