[tool.poetry]
name = "pydatapeek"
version = "0.1.0"
description = ""
authors = ["Miro (Shangjing) HU <mirohu@outlook.com>"]
license = "MIT"
packages = [
    { include = "PackageName"},
]


[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
altair = "^4.0.1"
altair_saver = "^0.1.0"
pytest = "^5.3.5"
xlwt = "^1.3.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


