[tool.poetry]
name = "pydatapeek"
version = "0.1.0"
description = ""
authors = ["Miro (Shangjing) HU <mirohu@outlook.com>"]
license = "MIT"
packages = [
    { include = "PackageName"},
]


[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
altair = "^4.0.1"
altair_saver = "^0.1.0"
pytest = "^5.3.5"
xlwt = "^1.3.0"
openpyxl = "^3.0.3"
xlrd = "^1.2.0"
wordcloud = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
flake8 = "^3.7.9"
wordcloud = "^1.6.0"
python-semantic-release = "^4.10.0"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


